syntax = "proto3";

package right;

message Person{
    int32 age=1;
    string first_name=2;
    string last_name=3;
    bytes picture=4;
    bool is_profile_verifid=5;
    float height=6;
}